BUGFIX - Ajustements dans la version mobile de la navbar

--- a/src/styles/components/modern-design/nav/style.css
+++ b/src/styles/components/modern-design/nav/style.css
@@ -722,7 +722,11 @@ nav::before,
     }
 
     .item-icon-container {
-        margin: 0.25rem 0.75rem 0.25rem 0;
+        margin: 0.25rem 1rem 0.25rem 0;
+    }
+
+    .chevron-container {
+        display: none;
     }
 
     .chevron-right,
